basic stylesheet created, implemented simple HTML5 video element

--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
-<!doctype HTML>
+<!DOCTYPE html>
 
 <html>
 
 	<head>
+                <title>metamachine v.0.01</title>
 
+		<link href="style.css" type="text/css" rel="stylesheet">
+
+		<script language="javascript" type="text/javascript" src="main.js"></script>
 	</head>
 
 	<body>
+		<div id="player">
+			<div id="header">
+				<h1>&lt/metamachine</h1>
+			</div>
+
+			<div id="menu">
+				<ul>
+				<li> element 1 </li>
+				<li> element 2 </li>
+				</ul>
+			</div>
+			
+			<video muted autoplay loop poster="example.jpg" id="bigvid">  
+				<source src="/home/alexej/Dokumente/repos/metamachinejs/example.mp4" type="video/mp4">
+			</video>
+
+
+			</div>
+		</div>
 
 	</body>
 
