figured out ajax in jQuery and implemented simple import for XML-data from files

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 		<link href="style.css" type="text/css" rel="stylesheet">
 
-		<script type="text/javascript" src="main.js" async></script>
-		<script type="text/javascript" src="querymain.js" async></script>
+		<!---	<script type="text/javascript" src="main.js" async></script> -->
 		<script src="http://code.jquery.com/jquery-2.1.4.js"></script>
+		<script type="text/javascript" src="querymain.js"></script>
 	</head>
 
 	<body>
@@ -35,10 +35,13 @@
 				<button onclick="videoWahl()">Test Input</button>
 				<p id="playlist"></p>
 					<div id="debug">
+						<ul id="XMLread"></ul>
+						<!---
 						<p>clipname:</p><p id="clipname"></p>
 						<p>position begin:</p><p id="begin"></p>
 						<p>position middle:</p><p id="middle"></p>
 						<p>position end:</p><p id="end"></p>
+						-->
 					</div>	
 			</div>
 			<!---
