--- a/index.html
+++ b/index.html
@@ -22,17 +22,15 @@
 
 			<div id="menu">
 				
-				<input id="attr1" type="range" min="0" max="4" step="1" value"1">Abenteuer</input><br>
-				<input id="attr2" type="range" min="0" max="4" step="1" value"1">Geborgenheit</input><br>
-				<input id="attr3" type="range" min="0" max="4" step="1" value"1">körperlicher Genuss</input><br>
-				<input id="attr4" type="range" min="0" max="4" step="1" value"1">kulinarischer Genuss</input><br>
-				<input id="attr5" type="range" min="0" max="4" step="1" value"1">Chance</input><br>
-				<input id="attr6" type="range" min="0" max="4" step="1" value"1">Geselligkeit</input><br>
+				<input id="attr1" type="range" min="0" max="5" step="1" value"1">Abenteuer</input><br>
+				<input id="attr2" type="range" min="0" max="5" step="1" value"1">Geborgenheit</input><br>
+				<input id="attr3" type="range" min="0" max="5" step="1" value"1">körperlicher Genuss</input><br>
+				<input id="attr4" type="range" min="0" max="5" step="1" value"1">kulinarischer Genuss</input><br>
+				<input id="attr5" type="range" min="0" max="5" step="1" value"1">Chance</input><br>
+				<input id="attr6" type="range" min="0" max="5" step="1" value"1">Geselligkeit</input><br>
 				
-				<button onclick="createPlaylist()">Playliste generieren</button>
+				<button id="generatePlaylist">Playliste generieren</button>
 				<br>
-				<input id="videowahl" type="range" min="0" max="3" step="1" value"0"><p id="wert"></p></input>
-				<button onclick="videoWahl()">Test Input</button>
 				<p id="playlist"></p>
 					<div id="debug">
 						<ul id="XMLread"></ul>
