added functionality to gender-speech buttons

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 	</head>
 
 	<body>
+		<!---github ribbon -->
+		<a href="https://github.com/stillefront/metamachinejs"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"></a>
+
+
 		<!---	<div id="player"> -->
 		<div id="middle">
 			<div id="header">
@@ -31,8 +35,8 @@
 				<input id="attr3" type="range" min="0" max="5" step="1" value"1">Tradition</input><br>
 				<input id="attr4" type="range" min="0" max="5" step="1" value"1">Abenteuer</input><br>
 				<input id="attr5" type="range" min="0" max="5" step="1" value"1">Perfektion</input><br>
-				<input id="female" type="radio" name="gender" value="female" checked>weibl. Stimme</input><br>
-				<input id="male" type="radio" name="gender" value="male">männl. Stimme</input><br>
+				<input id="female" type="radio" name="gender" value="f" checked>weibl. Stimme</input><br>
+				<input id="male" type="radio" name="gender" value="m">männl. Stimme</input><br>
 				<br>
 				<button id="generatePlaylist">Playliste generieren</button>
 				<br>
